# aoc2024

./: Cargo.toml  README.md  helper.py  part.template  run.sh  setup.sh  test.template
days/day1/src/: part1.rs  part2.rs
days/day1/tests/: part1_test.rs  part2_test.rs
days/day10/src/: part1.rs  part2.rs
days/day10/tests/: part1_test.rs  part2_test.rs
days/day11/: Cargo.toml
days/day11/src/: lib.rs  part1.rs  part2.rs  util.rs
days/day11/tests/: part1_test.rs
days/day12/: Cargo.toml
days/day12/src/: part1.rs  part2.rs
days/day12/tests/: part1_test.rs  part2_test.rs
days/day13/src/: part1.rs  part2.rs  util.rs
days/day13/tests/: part1_test.rs
days/day14/input/: part2.txt
days/day14/src/: part1.rs  part2.rs
days/day14/tests/: part1_test.rs
days/day15/src/: part1.rs  part2.rs
days/day15/tests/: part1_test.rs  part2_test.rs
days/day16/src/: part1.rs  part2.rs
days/day16/tests/: part1_test.rs  part2_test.rs
days/day17/src/: part1.rs  part2.rs
days/day17/tests/: part1_test.rs  part2_test.rs
days/day18/input/: part1.txt  part2.txt
days/day18/src/: part1.rs  part2.rs
days/day18/tests/: part1_test.rs  part2_test.rs
days/day19/src/: part1.rs  part2.rs
days/day19/tests/: part1_test.rs  part2_test.rs
days/day2/src/: part1.rs  part2.rs  util.rs
days/day2/tests/: part1_test.rs  part2_test.rs
days/day20/input/: part2.txt
days/day20/src/: part1.rs  part2.rs
days/day20/tests/: part1_test.rs
days/day21/src/: part1.rs  part2.rs  util.rs
days/day21/tests/: part1_test.rs
days/day22/src/: part1.rs  part2.rs
days/day22/tests/: part1_test.rs  part2_test.rs
days/day23/src/: part1.rs  part2.rs
days/day23/tests/: part1_test.rs  part2_test.rs
days/day24/src/: part1.rs
days/day24/tests/: part1_test.rs
days/day25/src/: part1.rs
days/day25/tests/: part1_test.rs
days/day3/src/: part1.rs  part2.rs
days/day3/tests/: part1_test.rs  part2_test.rs
days/day4/src/: part1.rs  part2.rs
days/day4/tests/: part1_test.rs  part2_test.rs
days/day5/src/: part1.rs  part2.rs
days/day5/tests/: part1_test.rs  part2_test.rs
days/day6/src/: part1.rs  part2.rs  util.rs
days/day6/tests/: part1_test.rs  part2_test.rs
days/day7/src/: part1.rs  part2.rs
days/day7/tests/: part1_test.rs  part2_test.rs
days/day8/: Cargo.toml
src/: main.rs
(+8 files in other folders)
