[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "days/day1", "days/day10", "days/day11", "days/day12", "days/day13", "days/day14", "days/day15", "days/day16", "days/day2", "days/day3", "days/day4", "days/day5", "days/day6", "days/day7", "days/day8", "days/day9",]

[dependencies.day1]
path = "days/day1"

[dependencies.day2]
path = "days/day2"

[dependencies.clap]
version = "4.0"
features = [ "derive",]

[dependencies.day3]
path = "days/day3"

[dependencies.day4]
path = "days/day4"

[dependencies.day5]
path = "days/day5"

[dependencies.day6]
path = "days/day6"

[dependencies.day7]
path = "days/day7"

[dependencies.day8]
path = "days/day8"

[dependencies.day9]
path = "days/day9"

[dependencies.day10]
path = "days/day10"

[dependencies.day11]
path = "days/day11"

[dependencies.day12]
path = "days/day12"

[dependencies.day13]
path = "days/day13"

[dependencies.day14]
path = "days/day14"

[dependencies.day15]
path = "days/day15"

[dependencies.day16]
path = "days/day16"
